updated header and added hero

--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Zak Salazar</title>
 </head>
-<header class="main-header">
-    <h1>Zak Salazar</h1>
-    <nav> 
-        <ul class="nav-bar"> 
-            <li>About Me </li>
-            <li>Work</li>
-            <li>Contact Me</li>
-            <li>Resume</li>
+<body></body>
+<header>
+    <h1 id="name">Zak Salazar</h1>
+    <nav class="main-nav"> 
+        <ul class="nav-links"> 
+            <li><a href="#"></a>About Me</li>
+            <li><a href="#"></a>Work</li>
+            <li><a href="#"></a>Contact Me</li>
+            <li><a href="#"></a>Resume</li>
         </ul>
     </nav>
 </header> 
-<body>
-    <section>
+    <section class="hero">
+    </section>
+
+    <section> 
         <h2>About Me</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus officiis unde sunt? Reiciendis dolore reprehenderit hic magnam delectus accusamus ducimus. Fuga veniam quae tenetur ex ratione tempora, voluptatibus omnis! Veniam!</p>
     </section>
@@ -35,7 +38,5 @@
         </li>
     </ul>
      </section>
-
-
 </body>
 </html>
