About Me section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body></body>
 <header>
-    <h1 id="name">Zak Salazar</h1>
+    <h1>Zak Salazar</h1>
     <nav class="main-nav"> 
         <ul class="nav-links"> 
             <li><a href="#"></a>About Me</li>
@@ -19,17 +19,16 @@
         </ul>
     </nav>
 </header> 
-    <section class="hero">
-    </section>
-
-    <section> 
-        <h2>About Me</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus officiis unde sunt? Reiciendis dolore reprehenderit hic magnam delectus accusamus ducimus. Fuga veniam quae tenetur ex ratione tempora, voluptatibus omnis! Veniam!</p>
-    </section>
-    <Section class="work">
+    <section class="hero"> </section>
+<main class="content" id="about">
+    <h2>About Me</h2>
+    <div>
+        <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
+    </div>
+    <Section class="#" id="work">
     <h2>Work</h2>
 </Section>
-<section class="contact-me">
+<section class="#" id="contact">
     <h2>Contact Me</h2>
     <ul>
         <li> 949.533.7691 </li>
