--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <h1>Zak Salazar</h1>
     <nav class="main-nav"> 
         <ul class="nav-links"> 
-            <li><a href="#"></a>About Me</li>
-            <li><a href="#"></a>Work</li>
-            <li><a href="#"></a>Contact Me</li>
+            <li><a href="#about"></a>About Me</li>
+            <li><a href="#work"></a>Work</li>
+            <li><a href="#contact"></a>Contact Me</li>
             <li><a href="#"></a>Resume</li>
         </ul>
     </nav>
 </header> 
     <section class="hero"> </section>
-<main class="content" id="about">
-    <h2>About Me</h2>
+<main class="content">
+    <h2 id="about">About Me</h2>
     <div>
         <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
     </div>
-    <Section class="#" id="work">
-    <h2>Work</h2>
+<Section class="content">
+    <h2 id="work">Work</h2>
 </Section>
-<section class="#" id="contact">
-    <h2>Contact Me</h2>
+<section class="#">
+    <h2 id="contact">Contact Me</h2>
     <ul>
         <li> 949.533.7691 </li>
         <li> zsalazar.tv@gmail.com </li>
