added hover feature to nav bar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body></body>
 <header>
     <h1>Zak Salazar</h1>
-    <nav class="main-nav"> 
-        <ul class="nav-links"> 
-            <li><a href="#about"></a>About Me</li>
-            <li><a href="#work"></a>Work</li>
-            <li><a href="#contact"></a>Contact Me</li>
-            <li><a href="#"></a>Resume</li>
-        </ul>
+    <nav> 
+            <a href="#about">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact">Contact Me</a>
+            <a href="#">Resume</a>
     </nav>
 </header> 
     <section class="hero"> </section>
