--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <div>
         <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
     </div>
+<main class="page-wrapper">
 <Section class="content">
     <h2 id="work">Work</h2>
 </Section>
-<section class="#">
+<section class="content">
     <h2 id="contact">Contact Me</h2>
     <ul>
         <li> 949.533.7691 </li>
@@ -35,5 +36,6 @@
         </li>
     </ul>
      </section>
+    </main>
 </body>
 </html>
