--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Zak Salazar</title>
 </head>
-<body></body>
+<body>
 <header>
     <h1>Zak Salazar</h1>
     <nav> 
@@ -17,25 +17,23 @@
             <a href="#">Resume</a>
     </nav>
 </header> 
-    <section class="hero"> </section>
-<main class="content">
-    <h2 id="about">About Me</h2>
-    <div>
-        <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
-    </div>
-<main class="page-wrapper">
-<Section class="content">
-    <h2 id="work">Work</h2>
-</Section>
-<section class="content">
-    <h2 id="contact">Contact Me</h2>
-    <ul>
-        <li> 949.533.7691 </li>
-        <li> zsalazar.tv@gmail.com </li>
-        <li> <a target = blank href="https://github.com/zaksalazar">Github </a> 
-        </li>
-    </ul>
+<section class="hero"> </section>
+<main class = "page-wrapper">
+    <section class="content" id="about">
+        <h2>About Me</h2>
+            <div>
+            <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
+            </div>
+    </section>
+    <section class="content" id="work">
+        <h2>Work</h2>
+    </section>
+    <section class="content" id="contact">
+        <h2>Contact Me</h2>
+        <a> 949.533.7691 </a>
+        <a> zsalazar.tv@gmail.com </a>
+        <a target = blank href="https://github.com/zaksalazar">Github </a> 
      </section>
-    </main>
+</main>
 </body>
 </html>
