refactored html and css

--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
 </header> 
 <section class="hero"> </section>
 <main class = "page-wrapper">
-    <section class="content" id="about">
+    <section class="content">
         <h2>About Me</h2>
             <div>
             <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
             </div>
     </section>
-    <section class="content" id="work">
+    <section class="content">
         <h2>Work</h2>
     </section>
-    <section class="content" id="contact">
+    <section class="content">
         <h2>Contact Me</h2>
+        <div>
         <a> 949.533.7691 </a>
         <a> zsalazar.tv@gmail.com </a>
         <a target = blank href="https://github.com/zaksalazar">Github </a> 
+        </div>
      </section>
 </main>
 </body>
