added 'Work' HTML and CSS

--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
     </section>
     <section class="content">
         <h2>Work</h2>
+        <div class = "flex-container"></div>
+        <a href ="#" class="flex-item horiseon"></a>
+        <div>
+            <h3>Horiseon</h3>
+            <span>Refactor</span>
+        </div>
+        <a href ="#"></a>
+        <a href ="#"></a>
+        <a href ="#"></a>
+        <a href ="#"></a>
     </section>
     <section class="content">
         <h2>Contact Me</h2>
-        <div>
+        <div class="contact">
         <a> 949.533.7691 </a>
         <a> zsalazar.tv@gmail.com </a>
         <a target = blank href="https://github.com/zaksalazar">Github </a> 
