--- a/index.html
+++ b/index.html
@@ -23,20 +23,42 @@
         <h2>About Me</h2>
             <div>
             <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatem laborum, ex facere pariatur deleniti nisi officiis exercitationem natus quos veniam recusandae consequuntur eius illo adipisci temporibus perspiciatis nesciunt earum.</p>
             </div>
     </section>
-    <section class="content">
+    <section class="page-section" id="work">
         <h2>Work</h2>
         <div class = "flex-container"></div>
-        <a href ="#" class="flex-item horiseon"></a>
+            <a href ="#" class="flex-item horiseon">
         <div>
             <h3>Horiseon</h3>
             <span>Refactor</span>
         </div>
-        <a href ="#"></a>
-        <a href ="#"></a>
-        <a href ="#"></a>
-        <a href ="#"></a>
+            </a>
+        <a href ="#" class ="flex-item juniper">
+        <div>
+            <h3>Juniper</h3>
+            <Span>Placeholder</Span>
+        </div> 
+    </a>
+        <a href ="#" class="flex-item half-dome">
+            <div>
+                <h3>Half Dome</h3>
+                <span>Placeholder>
+            </div>
+            </a>
+        <a href ="#" class="flex-item sequia">
+            <div>
+                <h3>Sequia</h3>
+                <span>Placeholder</span>
+            </div>
+        </a>    
+        <a href ="#" class="flex-item jay">
+            <div>
+                <h3>Stellers Jay</h3>
+                <span>Placeholder</span>
+            </div>
+        </a>    
     </section>
     <section class="content">
         <h2>Contact Me</h2>
