refactored html & adjusted images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="page-section" id="work">
         <h2>Work</h2>
-        <div class = "flex-container"></div>
+        <div class = "flex-container">
             <a href ="#" class="flex-item horiseon">
         <div>
             <h3>Horiseon</h3>
@@ -44,7 +44,7 @@
         <a href ="#" class="flex-item half-dome">
             <div>
                 <h3>Half Dome</h3>
-                <span>Placeholder>
+                <span>Placeholder</span>
             </div>
             </a>
         <a href ="#" class="flex-item sequia">
