added style and design

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
 </header> 
 <section class="hero"> </section>
 <main class = "page-wrapper">
-    <section class="content">
+    <section class="page-section">
         <h2>About Me</h2>
-            <div>
+        <figure class="profile">
+        <img src="../portfolio/assests/images/Ranger.jpg">
+        </figure>
+        <div>
             <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatem laborum, ex facere pariatur deleniti nisi officiis exercitationem natus quos veniam recusandae consequuntur eius illo adipisci temporibus perspiciatis nesciunt earum.</p>
-            </div>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error inventore libero accusamus aut corporis beatae neque nostrum. Doloremque veritatis, eligendi autem voluptatum ut quae dicta officiis cumque totam ducimus blanditiis?</p>
+        </div>
     </section>
     <section class="page-section" id="work">
         <h2>Work</h2>
         <div class = "flex-container">
-            <a href ="#" class="flex-item horiseon">
+            <a href ="https://github.com/zaksalazar/homework1" class="flex-item horiseon" target="_blank">
         <div>
             <h3>Horiseon</h3>
             <span>Refactor</span>
