--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </a>    
     </section>
-    <section class="content">
+    <section class="page-section contact" id="contact">
         <h2>Contact Me</h2>
         <div class="contact">
         <a> 949.533.7691 </a>
