image file paths

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="page-section">
         <h2>About Me</h2>
         <figure class="profile">
-        <img src="../portfolio/assests/images/Ranger.jpg">
+        <img src="./assests/images/Ranger.jpg">
         </figure>
         <div>
             <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
