--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
         <a href ="#" class="flex-item sequia">
             <div>
-                <h3>Sequia</h3>
+                <h3>Sequoia</h3>
                 <span>Placeholder</span>
             </div>
         </a>    
