--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <figure class="profile">
         <img src="./assests/images/Ranger.jpg">
         </figure>
-        <div>
+        <div class="about" id="about">
             <p> I am a former Park Ranger turned software developer. I have spent years mastering the art of communication and servant leadership. From wildfires to mountain rescues, I have a proven ability to handle stress under extreme preasure, and manage teams to work towards a common goal. Fiercly loyal and devoted to the betterment of the company.  </p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatem laborum, ex facere pariatur deleniti nisi officiis exercitationem natus quos veniam recusandae consequuntur eius illo adipisci temporibus perspiciatis nesciunt earum.</p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error inventore libero accusamus aut corporis beatae neque nostrum. Doloremque veritatis, eligendi autem voluptatum ut quae dicta officiis cumque totam ducimus blanditiis?</p>
@@ -64,9 +64,9 @@
             </div>
         </a>    
     </section>
-    <section class="page-section contact">
+    <section class="page-section" id="contact">
         <h2>Contact Me</h2>
-        <div class="contact">
+        <div>
         <a> 949.533.7691 </a>
         <a> zsalazar.tv@gmail.com </a>
         <a target = blank href="https://github.com/zaksalazar">Github </a> 
