--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     <section class="page-section" id="contact">
         <h2>Contact Me</h2>
-        <div>
+        <div class="contact">
         <a> 949.533.7691 </a>
         <a> zsalazar.tv@gmail.com </a>
         <a target = blank href="https://github.com/zaksalazar">Github </a> 
