added email anchor tag

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2>Contact Me</h2>
         <div class="contact">
         <a> 949.533.7691 </a>
-        <a> zsalazar.tv@gmail.com </a>
+        <a href = "mailto: zsalazar.tv@gmail.com">Send Email</a>
         <a target = blank href="https://github.com/zaksalazar">Github </a> 
         </div>
      </section>
