updated work portfolio projects

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <section class="page-section" id="work">
         <h2>Work</h2>
         <div class = "flex-container">
-            <a href ="https://github.com/zaksalazar/homework1" class="flex-item horiseon" target="_blank">
+            <a href ="https://zaksalazar.github.io/homework1/" class="flex-item horiseon" target="_blank">
         <div>
             <h3>Horiseon</h3>
             <span>Refactor</span>
         </div>
             </a>
-        <a href ="#" class ="flex-item juniper">
+        <a href ="https://zaksalazar.github.io/HappenIn/ " class ="flex-item juniper">
         <div>
-            <h3>Juniper</h3>
-            <Span>Placeholder</Span>
+            <h3>HappenIn</h3>
+            <Span>Group Project</Span>
         </div> 
     </a>
         <a href ="#" class="flex-item half-dome">
