added project 2 to portfolio

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <Span>Group Project</Span>
         </div> 
     </a>
-        <a href ="#" class="flex-item half-dome">
+        <a href ="https://open-minded.herokuapp.com/" class="flex-item half-dome">
             <div>
-                <h3>Half Dome</h3>
-                <span>Placeholder</span>
+                <h3>Open Minded</h3>
+                <span>Full Stack App</span>
             </div>
             </a>
         <a href ="#" class="flex-item sequia">
